--- a/Advance_Quantitative_Research-Natural_Gas_Price_Forecasting.ipynb
+++ b/Advance_Quantitative_Research-Natural_Gas_Price_Forecasting.ipynb
@@ -29,13 +29,15 @@
         "import seaborn as sns\n",
         "from datetime import datetime\n",
         "\n",
+        "from statsmodels.tsa.seasonal import STL\n",
+        "\n",
         "import warnings\n",
         "warnings.filterwarnings('ignore')"
       ],
       "metadata": {
         "id": "A5BiumMywCsY"
       },
-      "execution_count": 7,
+      "execution_count": 2,
       "outputs": []
     },
     {
@@ -48,13 +50,13 @@
       ],
       "metadata": {
         "id": "WOoirqnDwmk3",
-        "outputId": "5e51fdac-0afa-4d14-fd1b-90a310154bd9",
+        "outputId": "0b597e87-2e11-4f0c-f05e-7afcfe33654d",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 363
         }
       },
-      "execution_count": 8,
+      "execution_count": 3,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -74,7 +76,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-6ebaf385-16f5-4cac-ac8a-558da284e31d\" class=\"colab-df-container\">\n",
+              "  <div id=\"df-b0616050-c34f-4023-add1-2fdba235290b\" class=\"colab-df-container\">\n",
               "    <div>\n",
               "<style scoped>\n",
               "    .dataframe tbody tr th:only-of-type {\n",
@@ -154,7 +156,7 @@
               "    <div class=\"colab-df-buttons\">\n",
               "\n",
               "  <div class=\"colab-df-container\">\n",
-              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-6ebaf385-16f5-4cac-ac8a-558da284e31d')\"\n",
+              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-b0616050-c34f-4023-add1-2fdba235290b')\"\n",
               "            title=\"Convert this dataframe to an interactive table.\"\n",
               "            style=\"display:none;\">\n",
               "\n",
@@ -206,12 +208,12 @@
               "\n",
               "    <script>\n",
               "      const buttonEl =\n",
-              "        document.querySelector('#df-6ebaf385-16f5-4cac-ac8a-558da284e31d button.colab-df-convert');\n",
+              "        document.querySelector('#df-b0616050-c34f-4023-add1-2fdba235290b button.colab-df-convert');\n",
               "      buttonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "      async function convertToInteractive(key) {\n",
-              "        const element = document.querySelector('#df-6ebaf385-16f5-4cac-ac8a-558da284e31d');\n",
+              "        const element = document.querySelector('#df-b0616050-c34f-4023-add1-2fdba235290b');\n",
               "        const dataTable =\n",
               "          await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                    [key], {});\n",
@@ -231,8 +233,8 @@
               "  </div>\n",
               "\n",
               "\n",
-              "    <div id=\"df-812acbdc-dd34-4b22-8b17-1681311e6476\">\n",
-              "      <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-812acbdc-dd34-4b22-8b17-1681311e6476')\"\n",
+              "    <div id=\"df-98157a60-63dd-4e8b-bce5-5542200a0ff0\">\n",
+              "      <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-98157a60-63dd-4e8b-bce5-5542200a0ff0')\"\n",
               "                title=\"Suggest charts\"\n",
               "                style=\"display:none;\">\n",
               "\n",
@@ -351,7 +353,7 @@
               "        }\n",
               "        (() => {\n",
               "          let quickchartButtonEl =\n",
-              "            document.querySelector('#df-812acbdc-dd34-4b22-8b17-1681311e6476 button');\n",
+              "            document.querySelector('#df-98157a60-63dd-4e8b-bce5-5542200a0ff0 button');\n",
               "          quickchartButtonEl.style.display =\n",
               "            google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "        })();\n",
@@ -368,7 +370,7 @@
             }
           },
           "metadata": {},
-          "execution_count": 8
+          "execution_count": 3
         }
       ]
     },
@@ -413,9 +415,9 @@
           "height": 658
         },
         "id": "SK5fYKioW-P9",
-        "outputId": "91e4aadb-ae8c-49a3-af0e-318b1a13775d"
+        "outputId": "8da79234-e9a9-4b35-f55b-f713c445ac8e"
       },
-      "execution_count": 9,
+      "execution_count": 4,
       "outputs": [
         {
           "output_type": "stream",
@@ -458,7 +460,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-1701107b-85cf-470e-80e2-126933795273\" class=\"colab-df-container\">\n",
+              "  <div id=\"df-29597359-82ae-430d-8c55-fa2450dadad9\" class=\"colab-df-container\">\n",
               "    <div>\n",
               "<style scoped>\n",
               "    .dataframe tbody tr th:only-of-type {\n",
@@ -538,7 +540,7 @@
               "    <div class=\"colab-df-buttons\">\n",
               "\n",
               "  <div class=\"colab-df-container\">\n",
-              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-1701107b-85cf-470e-80e2-126933795273')\"\n",
+              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-29597359-82ae-430d-8c55-fa2450dadad9')\"\n",
               "            title=\"Convert this dataframe to an interactive table.\"\n",
               "            style=\"display:none;\">\n",
               "\n",
@@ -590,12 +592,12 @@
               "\n",
               "    <script>\n",
               "      const buttonEl =\n",
-              "        document.querySelector('#df-1701107b-85cf-470e-80e2-126933795273 button.colab-df-convert');\n",
+              "        document.querySelector('#df-29597359-82ae-430d-8c55-fa2450dadad9 button.colab-df-convert');\n",
               "      buttonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "      async function convertToInteractive(key) {\n",
-              "        const element = document.querySelector('#df-1701107b-85cf-470e-80e2-126933795273');\n",
+              "        const element = document.querySelector('#df-29597359-82ae-430d-8c55-fa2450dadad9');\n",
               "        const dataTable =\n",
               "          await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                    [key], {});\n",
@@ -615,8 +617,8 @@
               "  </div>\n",
               "\n",
               "\n",
-              "    <div id=\"df-d2a3646d-565e-4b37-b5f3-7010caaab774\">\n",
-              "      <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-d2a3646d-565e-4b37-b5f3-7010caaab774')\"\n",
+              "    <div id=\"df-c982c0f5-7ac8-4685-958b-9ae68c04e3eb\">\n",
+              "      <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-c982c0f5-7ac8-4685-958b-9ae68c04e3eb')\"\n",
               "                title=\"Suggest charts\"\n",
               "                style=\"display:none;\">\n",
               "\n",
@@ -735,7 +737,7 @@
               "        }\n",
               "        (() => {\n",
               "          let quickchartButtonEl =\n",
-              "            document.querySelector('#df-d2a3646d-565e-4b37-b5f3-7010caaab774 button');\n",
+              "            document.querySelector('#df-c982c0f5-7ac8-4685-958b-9ae68c04e3eb button');\n",
               "          quickchartButtonEl.style.display =\n",
               "            google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "        })();\n",
@@ -752,7 +754,7 @@
             }
           },
           "metadata": {},
-          "execution_count": 9
+          "execution_count": 4
         }
       ]
     },
@@ -771,13 +773,13 @@
       ],
       "metadata": {
         "id": "6hBySZRZiz7S",
-        "outputId": "38db131c-bbc5-4f59-a842-d8802fe217c2",
+        "outputId": "ff9fc408-a42a-4659-8b22-2a6344819283",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 524
         }
       },
-      "execution_count": 10,
+      "execution_count": 5,
       "outputs": [
         {
           "output_type": "display_data",
@@ -803,24 +805,23 @@
         "# Create a box plot to show price distribution by month\n",
         "plt.figure(figsize=(12, 6))\n",
         "# Order the months from 1 to 12\n",
-        "#colpal = sns.color_palette(\"Set2, 14\")\n",
         "month_order = list(range(1, 13))\n",
         "sns.boxplot(x='Month', y='Prices', data=Monthdf, order=month_order, palette=\"husl\")\n",
         "plt.title('Natural Gas Price Distribution by Month')\n",
         "plt.xlabel('Month Number')\n",
         "plt.ylabel('Price Per $')\n",
         "plt.grid(axis='y', linestyle='--')\n",
-        "plt.savefig('nat_gas_price_distribution_by_month_boxplot.png')"
+        "#plt.savefig('nat_gas_price_distribution_by_month_boxplot.png')"
       ],
       "metadata": {
         "id": "Q7oeOZ1WynmP",
-        "outputId": "38f1c5d8-c6fc-462e-daab-d33d7ea0c1bc",
+        "outputId": "8562d427-a501-48d2-ed40-dedc24f13b52",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 564
         }
       },
-      "execution_count": 29,
+      "execution_count": 6,
       "outputs": [
         {
           "output_type": "display_data",
@@ -842,6 +843,17 @@
       "metadata": {
         "id": "p-Wfgp6gV0pG"
       }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Implement Seasonal Decomposition"
+      ],
+      "metadata": {
+        "id": "cLNnZqfVq3XR"
+      },
+      "execution_count": 7,
+      "outputs": []
     }
   ],
   "metadata": {
