--- a/Advance_Quantitative_Research-Natural_Gas_Price_Forecasting.ipynb
+++ b/Advance_Quantitative_Research-Natural_Gas_Price_Forecasting.ipynb
@@ -761,6 +761,16 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "#### **Natural Gas Monthly Prices (Time Series Plot)**\n",
+        "This shows the raw data over time. You can clearly see an upward trend (prices generally increasing from 2020 to 2024) and seasonality (prices spike in winter months and drop in summer months), which is typical for natural gas demand."
+      ],
+      "metadata": {
+        "id": "PlFiiW3R9YlN"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [
         "# Visualise the data\n",
@@ -775,13 +785,13 @@
       ],
       "metadata": {
         "id": "6hBySZRZiz7S",
-        "outputId": "ec11be60-2def-40b2-9a20-20ace64aa868",
+        "outputId": "27d88679-20dd-45a1-812e-08ed07f99b7f",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 524
         }
       },
-      "execution_count": 96,
+      "execution_count": 100,
       "outputs": [
         {
           "output_type": "display_data",
@@ -798,7 +808,15 @@
     {
       "cell_type": "markdown",
       "source": [
-        "## Decomposition\n"
+        "## Statistical Tests & Analysis\n",
+        "\n",
+        "**STL Decomposition (Trend, Seasonal, Residual):**\n",
+        "\n",
+        "**Trend:** Isolates the long-term direction of the price. It confirms the steady increase in price over the years, ignoring the month-to-month volatility.\n",
+        "\n",
+        "**Seasonal:** Isolates the repeating annual pattern. This confirms that gas prices follow a predictable cycle every 12 months.\n",
+        "\n",
+        "**Residual:** This is the \"noise\" or random error left over after removing the Trend and Seasonality.\n"
       ],
       "metadata": {
         "id": "p-Wfgp6gV0pG"
@@ -882,8 +900,10 @@
       "cell_type": "markdown",
       "source": [
         "# Statistical Tests & Analysis: Stationart Check\n",
-        " - ADF\n",
-        " - KPSS"
+        "\n",
+        "- **ACF (Autocorrelation Function):** This chart shows how correlated the price is with its past values. If the blue bars decrease very slowly (which they likely do here), it indicates the data is non-stationary and heavily influenced by a trend.\n",
+        "\n",
+        "- **PACF (Partial Autocorrelation Function):** This shows the direct correlation between a month and a past month, removing the \"middle-man\" influence of the months in between. This is primarily used to determine the parameters for AR (AutoRegressive) models."
       ],
       "metadata": {
         "id": "kB0A2WzbE1HC"
