--- a/Advance_Quantitative_Research-Natural_Gas_Price_Forecasting.ipynb
+++ b/Advance_Quantitative_Research-Natural_Gas_Price_Forecasting.ipynb
@@ -1188,21 +1188,21 @@
       "source": [
         "# Function: Estimate natural gas price for a given date\n",
         "def estimate_gas_price(input_date, df_month=df_month, model=ETS_result):\n",
-        "    # --- Convert input date ---\n",
+        "    # Convert input date\n",
         "    if isinstance(input_date, str):\n",
         "        date = pd.to_datetime(input_date)\n",
         "    else:\n",
         "        date = input_date\n",
         "\n",
-        "    # --- If date exists in the historical dataset ---\n",
+        "    # If date exists in the historical dataset\n",
         "    if date in df_month.index:\n",
         "        return df_month.loc[date]\n",
         "\n",
-        "    # --- If date is before historical data ---\n",
+        "    # If date is before historical data\n",
         "    if date < df_month.index.min():\n",
         "        raise ValueError(\"Date is earlier than the available historical data.\")\n",
         "\n",
-        "    # --- If date is after historical data (forecast needed) ---\n",
+        "    # If date is after historical data (forecast needed)\n",
         "    last_date = df_month.index[-1]\n",
         "\n",
         "    # Generate forecasts up to requested date\n",
@@ -1218,14 +1218,13 @@
         "        return forecast_df.loc[date, \"mean\"]\n",
         "\n",
         "    # If date falls within the same forecast month, return that value\n",
-        "    # (useful if user enters mid-month date)\n",
         "    nearest = forecast_index.asof(date)\n",
         "    return forecast_df.loc[nearest, \"mean\"]\n"
       ],
       "metadata": {
         "id": "Em3RKaca_Fgb"
       },
-      "execution_count": 42,
+      "execution_count": 47,
       "outputs": []
     },
     {
@@ -1238,9 +1237,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "g5Zy8Cc3_KwT",
-        "outputId": "d4c8334b-085b-4a2a-aa04-5dd0e5e6824d"
+        "outputId": "79576a1b-dfa9-4b12-c62f-d016e3466314"
       },
-      "execution_count": 43,
+      "execution_count": 48,
       "outputs": [
         {
           "output_type": "stream",
@@ -1261,9 +1260,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "1eNVspnY_lSa",
-        "outputId": "4c1f257e-ed31-4a94-ae5a-4a4e809597c8"
+        "outputId": "2d4c368c-9636-4849-b17f-5ab6db6ad338"
       },
-      "execution_count": 44,
+      "execution_count": 49,
       "outputs": [
         {
           "output_type": "stream",
@@ -1285,9 +1284,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "VvugZ9Bj_nGK",
-        "outputId": "04990b20-c7f8-4d78-ae7d-d1d59e2ee713"
+        "outputId": "a790d843-f41e-4478-c489-93e862cc30b3"
       },
-      "execution_count": 45,
+      "execution_count": 50,
       "outputs": [
         {
           "output_type": "stream",
@@ -1308,9 +1307,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "4LCpt274ASze",
-        "outputId": "aeaee0e5-0c6f-47ed-fc30-a584baf0d637"
+        "outputId": "6607a361-7589-4f41-fa22-c43a455c5ea4"
       },
-      "execution_count": 46,
+      "execution_count": 51,
       "outputs": [
         {
           "output_type": "stream",
