--- a/Task2/Natural_Gas_Storage_Contract_Pricing_Model.ipynb
+++ b/Task2/Natural_Gas_Storage_Contract_Pricing_Model.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOKfUgsgH34rP5Kqe0G9XSw",
+      "authorship_tag": "ABX9TyPOnAPagfoJyzeXEI6FB/qk",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -194,18 +194,75 @@
     {
       "cell_type": "code",
       "source": [
-        "# Build daily forward curve with linear interpolation + 1 year extrapolation\n",
-        "daily_idx = pd.date_range(df.index.min(), df.index.max() + pd.DateOffset(years=1), freq='D')\n",
-        "forward_curve = df.reindex(daily_idx).interpolate()\n",
+        "### Daily Interpolation (Historical data)\n",
+        "# Create daily date range for historical period\n",
+        "hist_daily_index = pd.date_range(start=Nat_Gas_df.index.min(), end=Nat_Gas_df.index.max(), freq='D')\n",
         "\n",
-        "forward_curve_df = forward_curve.rename(columns={'Prices':'ForwardPrice'})\n",
-        "forward_curve_df"
+        "# Reindex and interpolate linearly\n",
+        "hist_daily_curve = (Nat_Gas_df.reindex(hist_daily_index).interpolate(method='linear'))\n",
+        "hist_daily_curve.index.name = 'Dates'\n",
+        "\n",
+        "\n",
+        "### Daily extrapolation (1 Year Forward Using ETS Model Forcasted Data)\n",
+        "# Create daily date range for forecast period\n",
+        "forecast_daily_index = pd.date_range(start=ETS_df.index.min(), end=ETS_df.index.max(), freq='D')\n",
+        "\n",
+        "# Reindex ETS monthly prices to daily and interpolate\n",
+        "forecast_daily_curve = (ETS_df.reindex(forecast_daily_index).interpolate(method='linear'))\n",
+        "forecast_daily_curve.index.name = 'Dates'\n",
+        "\n",
+        "\n",
+        "# Combine into final daily forward curve\n",
+        "daily_forward_curve = pd.concat([hist_daily_curve, forecast_daily_curve])\n",
+        "\n",
+        "# Remove duplicate dates (if overlap exists)\n",
+        "daily_forward_curve = daily_forward_curve[~daily_forward_curve.index.duplicated(keep='last')]\n",
+        "\n",
+        "print(\"Daily Forward Curve\")\n",
+        "print(daily_forward_curve.head(10))\n",
+        "print(daily_forward_curve.tail(10))\n"
       ],
       "metadata": {
-        "id": "i7eEPBCxtffi"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "i7eEPBCxtffi",
+        "outputId": "45d184b6-5d18-4c79-a132-01b460298d25"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 21,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Daily Forward Curve\n",
+            "                Price\n",
+            "Dates                \n",
+            "2020-10-31  10.100000\n",
+            "2020-11-01  10.106667\n",
+            "2020-11-02  10.113333\n",
+            "2020-11-03  10.120000\n",
+            "2020-11-04  10.126667\n",
+            "2020-11-05  10.133333\n",
+            "2020-11-06  10.140000\n",
+            "2020-11-07  10.146667\n",
+            "2020-11-08  10.153333\n",
+            "2020-11-09  10.160000\n",
+            "                Price\n",
+            "Dates                \n",
+            "2025-09-21  12.344502\n",
+            "2025-09-22  12.355902\n",
+            "2025-09-23  12.367303\n",
+            "2025-09-24  12.378703\n",
+            "2025-09-25  12.390104\n",
+            "2025-09-26  12.401504\n",
+            "2025-09-27  12.412905\n",
+            "2025-09-28  12.424305\n",
+            "2025-09-29  12.435706\n",
+            "2025-09-30  12.447106\n"
+          ]
+        }
+      ]
     }
   ]
 }
