--- a/Task2/Natural_Gas_Storage_Contract_Pricing_Model.ipynb
+++ b/Task2/Natural_Gas_Storage_Contract_Pricing_Model.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOgizqgc1zSoQpriUijjRiV",
+      "authorship_tag": "ABX9TyOluEZ2ZvtSgoLO17zHVoe/",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -267,34 +267,23 @@
     {
       "cell_type": "code",
       "source": [
-        "# Pricing Function\n",
-        "def calculate_contract_value(injection_dates, withdrawal_dates,\n",
-        "                             injection_rate, withdrawal_rate,\n",
-        "                             max_volume,\n",
-        "                             storage_cost_per_month,\n",
-        "                             injection_withdrawal_cost_per_unit,\n",
-        "                             transport_cost_per_trip,\n",
-        "                             price_data):\n",
+        "# Function to Calculate Natural Gas Price\n",
+        "def calculate_contract_value(\n",
+        "    injection_dates, # List of dates to inject gas.\n",
+        "    withdrawal_dates, # List of dates to withdraw gas.\n",
+        "    injection_rate, # Volume to inject per event ( 1M MMBtu).\n",
+        "    withdrawal_rate, # Volume to withdraw per event.\n",
+        "    max_volume, # Maximum storage capacity.\n",
+        "    storage_cost_per_month, # Fixed monthly cost for storage.\n",
+        "    price_data # DataFrame with daily prices (index=Date, columns=['Prices']).\n",
+        "):\n",
         "    \"\"\"\n",
-        "    Calculates the value of a gas storage contract.\n",
-        "\n",
-        "    Parameters:\n",
-        "    -\n",
-        "    - withdrawal_dates: List of dates to withdraw gas.\n",
-        "    - injection_rate: Volume to inject per event (e.g., 1M MMBtu).\n",
-        "    - withdrawal_rate: Volume to withdraw per event.\n",
-        "    - max_volume: Maximum storage capacity.\n",
-        "    - storage_cost_per_month: Fixed monthly cost for storage.\n",
-        "    - injection_withdrawal_cost_per_unit: Variable cost per unit volume for inj/with.\n",
-        "    - transport_cost_per_trip: Fixed cost per transport event.\n",
-        "    - price_data: DataFrame with daily prices (index=Date, columns=['Prices']).\n",
-        "\n",
-        "    Returns:\n",
+        "    The function returns:\n",
         "    - contract_value: Total Net Present Value (assuming 0 interest).\n",
         "    - details_df: DataFrame containing the schedule and cash flows.\n",
         "    \"\"\"\n",
         "\n",
-        "    # Combine events\n",
+        "# Combine events\n",
         "    events = []\n",
         "    for d in injection_dates:\n",
         "        events.append({'Date': pd.to_datetime(d), 'Type': 'Injection', 'Volume': injection_rate})\n",
@@ -309,10 +298,9 @@
         "\n",
         "    # Initialize variables\n",
         "    inventory = 0\n",
-        "    total_cash_flow = 0\n",
         "    results = []\n",
         "\n",
-        "    # Sort price data for efficient lookup or use asof\n",
+        "    # Sort price data for efficient lookup\n",
         "    price_data = price_data.sort_index()\n",
         "\n",
         "    for i, row in schedule.iterrows():\n",
@@ -321,15 +309,13 @@
         "        volume = row['Volume']\n",
         "\n",
         "        # Get Price\n",
-        "        # Using asof to find the nearest price if exact date is missing (robustness)\n",
-        "        # Ideally, price_data has all dates.\n",
         "        try:\n",
         "            if current_date in price_data.index:\n",
         "                price = price_data.loc[current_date, 'Prices']\n",
         "            else:\n",
         "                price = price_data.asof(current_date)['Prices']\n",
         "        except KeyError:\n",
-        "            price = np.nan # Should handle this better in prod\n",
+        "            price = np.nan\n",
         "\n",
         "        # Cash Flow Calculation\n",
         "        step_cash_flow = 0\n",
@@ -337,28 +323,21 @@
         "        if action_type == 'Injection':\n",
         "            # Check Constraint\n",
         "            if inventory + volume > max_volume:\n",
-        "                volume = max(0, max_volume - inventory) # Adjust volume to fit\n",
+        "                volume = max(0, max_volume - inventory)\n",
         "\n",
-        "            # Costs: Buying Gas + Inj Cost + Transport\n",
+        "            # Cost: Buying Gas only\n",
         "            gas_cost = volume * price\n",
-        "            inj_cost = volume * injection_withdrawal_cost_per_unit\n",
-        "            trans_cost = transport_cost_per_trip\n",
-        "\n",
-        "            step_cash_flow = -(gas_cost + inj_cost + trans_cost)\n",
+        "            step_cash_flow = -gas_cost\n",
         "            inventory += volume\n",
         "\n",
         "        elif action_type == 'Withdrawal':\n",
         "            # Check Constraint\n",
         "            if inventory - volume < 0:\n",
-        "                volume = max(0, inventory) # Adjust to available\n",
+        "                volume = max(0, inventory)\n",
         "\n",
-        "            # Revenue: Selling Gas\n",
-        "            # Costs: With Cost + Transport\n",
+        "            # Revenue: Selling Gas only\n",
         "            gas_rev = volume * price\n",
-        "            with_cost = volume * injection_withdrawal_cost_per_unit\n",
-        "            trans_cost = transport_cost_per_trip\n",
-        "\n",
-        "            step_cash_flow = gas_rev - with_cost - trans_cost\n",
+        "            step_cash_flow = gas_rev\n",
         "            inventory -= volume\n",
         "\n",
         "        results.append({\n",
@@ -373,22 +352,13 @@
         "    details_df = pd.DataFrame(results)\n",
         "\n",
         "    # Calculate Storage Cost\n",
-        "    # Assumption: Storage cost is paid for the duration from first to last event?\n",
-        "    # Or simply monthly fee * number of months in the year?\n",
-        "    # Prompt: \"pay ... fixed fee of $100K a month\".\n",
-        "    # Let's assume the contract is evaluated over the period between the first and last active date.\n",
         "    if not details_df.empty:\n",
         "        start_date = details_df['Date'].min()\n",
         "        end_date = details_df['Date'].max()\n",
-        "        # Calculate duration in months\n",
         "        duration_months = (end_date - start_date).days / 30.44\n",
-        "        # Add a small buffer or round up? Let's keep it continuous.\n",
-        "        if duration_months < 1: duration_months = 1 # Minimum 1 month?\n",
+        "        if duration_months < 1: duration_months = 1\n",
         "\n",
         "        total_storage_cost = duration_months * storage_cost_per_month\n",
-        "\n",
-        "        # Or should we output the storage cost as a row?\n",
-        "        # Let's deduct it from the final value.\n",
         "    else:\n",
         "        total_storage_cost = 0\n",
         "\n",
@@ -399,26 +369,13 @@
       "metadata": {
         "id": "K-FdqWWQZ_GH"
       },
-      "execution_count": 32,
+      "execution_count": 35,
       "outputs": []
     },
     {
       "cell_type": "code",
       "source": [
-        "# ---------------------------------------------------------\n",
-        "# Test the function with sample inputs\n",
-        "# ---------------------------------------------------------\n",
-        "\n",
-        "# Sample Inputs\n",
-        "inj_dates = ['2024-11-15', '2024-12-15'] # Winter injection? Prices are high in winter.\n",
-        "# Wait, optimal is Buy Low (Summer) Sell High (Winter).\n",
-        "# Forecast Data:\n",
-        "# 10/24: 12.2\n",
-        "# 11/24: 12.7\n",
-        "# 01/25: 13.1\n",
-        "# 05/25: 12.1 (Summer 2025)\n",
-        "# 07/25: 12.2\n",
-        "# 09/25: 12.4\n",
+        "# Test scenario data\n",
         "\n",
         "# Strategy: Since we are starting in Oct 2024, the prices are already \"High\" (Winter 24/25).\n",
         "# If we inject now, we pay ~12.2. If we sell in Jan, we get 13.1. Spread = 0.9.\n",
@@ -426,7 +383,8 @@
         "# 0.9 spread might not cover 100k storage if volume is low.\n",
         "# Let's try to inject in Summer 2025 and Sell later? But forecast ends Sep 2025.\n",
         "# Let's stick to the prompt scenario: \"buy gas now ... sell in winter\".\n",
-        "# Dates:\n",
+        "\n",
+        "# Sample dates:\n",
         "inj_dates_test = ['2024-10-31', '2024-11-15'] # Buying early winter\n",
         "with_dates_test = ['2025-01-15', '2025-02-15'] # Selling peak winter\n",
         "\n",
@@ -442,8 +400,6 @@
         "    inj_rate_test, with_rate_test,\n",
         "    max_vol_test,\n",
         "    storage_cost_test,\n",
-        "    inj_with_cost_test,\n",
-        "    transport_cost_test,\n",
         "    daily_forward_curve\n",
         ")\n",
         "\n",
@@ -452,26 +408,26 @@
         "print(df_res)"
       ],
       "metadata": {
-        "id": "bvvVM8Q3mQwG",
-        "outputId": "172e4e7b-9ac4-461c-8019-65523a608c8f",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "bvvVM8Q3mQwG",
+        "outputId": "336cbb3c-dc36-4463-a664-09160344c353"
       },
-      "execution_count": 33,
+      "execution_count": 37,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Contract Value: $-92,217.77\n",
+            "Contract Value: $111,782.23\n",
             "\n",
             "Details:\n",
             "        Date      Action      Price  Volume  Inventory     Cash_Flow\n",
-            "0 2024-10-31   Injection  12.206504  100000     100000 -1.271650e+06\n",
-            "1 2024-11-15   Injection  12.465505  100000     200000 -1.297551e+06\n",
-            "2 2025-01-15  Withdrawal  13.105704  100000     100000  1.259570e+06\n",
-            "3 2025-02-15  Withdrawal  13.035638  100000          0  1.252564e+06\n"
+            "0 2024-10-31   Injection  12.206504  100000     100000 -1.220650e+06\n",
+            "1 2024-11-15   Injection  12.465505  100000     200000 -1.246551e+06\n",
+            "2 2025-01-15  Withdrawal  13.105704  100000     100000  1.310570e+06\n",
+            "3 2025-02-15  Withdrawal  13.035638  100000          0  1.303564e+06\n"
           ]
         }
       ]
