--- a/Task3/Credit_Risk_Analysis_and_Modeling_PD_and_EL_Prediction.ipynb
+++ b/Task3/Credit_Risk_Analysis_and_Modeling_PD_and_EL_Prediction.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyO1xHng/Qgw+x03ay/wmHGL",
+      "authorship_tag": "ABX9TyOMrEbGt+VcgRs225kYzuLW",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -557,6 +557,12 @@
         "  print(\"\\nSummary Statistics:\")\n",
         "  print(df.describe())\n",
         "\n",
+        "  print(\"\\nData Quality Verification:\")\n",
+        "  # Check for missing values\n",
+        "  missing_val = df.isnull().sum()\n",
+        "  print(missing_val)\n",
+        "\n",
+        "\n",
         "# Call the data_understanding function\n",
         "data_understanding(df)"
       ],
@@ -565,9 +571,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "XCcrpI-Orszn",
-        "outputId": "5fe8d9cc-739a-4a8b-b39d-3d8dbcbbd122"
+        "outputId": "fd16e031-6414-42c6-c8d4-1db498eb9c8e"
       },
-      "execution_count": 5,
+      "execution_count": 10,
       "outputs": [
         {
           "output_type": "stream",
@@ -616,7 +622,22 @@
             "25%        0.000000  \n",
             "50%        0.000000  \n",
             "75%        0.000000  \n",
-            "max        1.000000  \n"
+            "max        1.000000  \n",
+            "\n",
+            "Data Quality Verification:\n",
+            "customer_id                 0\n",
+            "credit_lines_outstanding    0\n",
+            "loan_amt_outstanding        0\n",
+            "total_debt_outstanding      0\n",
+            "income                      0\n",
+            "years_employed              0\n",
+            "fico_score                  0\n",
+            "default                     0\n",
+            "dtype: int64\n",
+            "\n",
+            "Missing Values:\n",
+            "Series([], dtype: int64)\n",
+            "No missing values found.\n"
           ]
         }
       ]
