--- a/Task3/Credit_Risk_Analysis_and_Modeling_PD_and_EL_Prediction.ipynb
+++ b/Task3/Credit_Risk_Analysis_and_Modeling_PD_and_EL_Prediction.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOSGtXsuIIyogHge/elcNym",
+      "authorship_tag": "ABX9TyOigA64ghhHsBil47vJikdL",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -47,7 +47,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 13,
+      "execution_count": 21,
       "metadata": {
         "id": "PZdvDUO9WUIn"
       },
@@ -86,9 +86,9 @@
           "height": 443
         },
         "id": "VOxcX1BsYRN4",
-        "outputId": "1021eaf4-f675-4394-f517-d6fdd78ef661"
+        "outputId": "27e08908-4dbb-45b6-b22a-5c1678fae61f"
       },
-      "execution_count": 2,
+      "execution_count": 22,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -124,7 +124,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-cc2c20a3-649d-43bb-843d-6146c623c518\" class=\"colab-df-container\">\n",
+              "  <div id=\"df-0a1abb1f-975f-4668-bb6c-468d4345187d\" class=\"colab-df-container\">\n",
               "    <div>\n",
               "<style scoped>\n",
               "    .dataframe tbody tr th:only-of-type {\n",
@@ -282,7 +282,7 @@
               "    <div class=\"colab-df-buttons\">\n",
               "\n",
               "  <div class=\"colab-df-container\">\n",
-              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-cc2c20a3-649d-43bb-843d-6146c623c518')\"\n",
+              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-0a1abb1f-975f-4668-bb6c-468d4345187d')\"\n",
               "            title=\"Convert this dataframe to an interactive table.\"\n",
               "            style=\"display:none;\">\n",
               "\n",
@@ -334,12 +334,12 @@
               "\n",
               "    <script>\n",
               "      const buttonEl =\n",
-              "        document.querySelector('#df-cc2c20a3-649d-43bb-843d-6146c623c518 button.colab-df-convert');\n",
+              "        document.querySelector('#df-0a1abb1f-975f-4668-bb6c-468d4345187d button.colab-df-convert');\n",
               "      buttonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "      async function convertToInteractive(key) {\n",
-              "        const element = document.querySelector('#df-cc2c20a3-649d-43bb-843d-6146c623c518');\n",
+              "        const element = document.querySelector('#df-0a1abb1f-975f-4668-bb6c-468d4345187d');\n",
               "        const dataTable =\n",
               "          await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                    [key], {});\n",
@@ -359,8 +359,8 @@
               "  </div>\n",
               "\n",
               "\n",
-              "    <div id=\"df-d3715e4f-2e0b-4787-be84-85aaa2aa47bf\">\n",
-              "      <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-d3715e4f-2e0b-4787-be84-85aaa2aa47bf')\"\n",
+              "    <div id=\"df-a9dac062-1f8c-49ed-aa00-51c6b20b989d\">\n",
+              "      <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-a9dac062-1f8c-49ed-aa00-51c6b20b989d')\"\n",
               "                title=\"Suggest charts\"\n",
               "                style=\"display:none;\">\n",
               "\n",
@@ -479,14 +479,14 @@
               "        }\n",
               "        (() => {\n",
               "          let quickchartButtonEl =\n",
-              "            document.querySelector('#df-d3715e4f-2e0b-4787-be84-85aaa2aa47bf button');\n",
+              "            document.querySelector('#df-a9dac062-1f8c-49ed-aa00-51c6b20b989d button');\n",
               "          quickchartButtonEl.style.display =\n",
               "            google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "        })();\n",
               "      </script>\n",
               "    </div>\n",
               "\n",
-              "  <div id=\"id_9952b979-13ae-4960-abcc-3d5d0977449a\">\n",
+              "  <div id=\"id_33740546-676e-4f1b-81eb-917a0153e435\">\n",
               "    <style>\n",
               "      .colab-df-generate {\n",
               "        background-color: #E8F0FE;\n",
@@ -530,7 +530,7 @@
               "    <script>\n",
               "      (() => {\n",
               "      const buttonEl =\n",
-              "        document.querySelector('#id_9952b979-13ae-4960-abcc-3d5d0977449a button.colab-df-generate');\n",
+              "        document.querySelector('#id_33740546-676e-4f1b-81eb-917a0153e435 button.colab-df-generate');\n",
               "      buttonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
@@ -551,7 +551,7 @@
             }
           },
           "metadata": {},
-          "execution_count": 2
+          "execution_count": 22
         }
       ]
     },
@@ -651,9 +651,9 @@
           "height": 1000
         },
         "id": "XCcrpI-Orszn",
-        "outputId": "ff0623a5-0997-4536-ce17-1414327174d7"
+        "outputId": "9a9c5dd7-8b9d-496f-d4d9-ddfa9be293c6"
       },
-      "execution_count": 3,
+      "execution_count": 23,
       "outputs": [
         {
           "output_type": "stream",
@@ -871,9 +871,9 @@
           "height": 443
         },
         "id": "eSUq3BREJtZk",
-        "outputId": "fae603d1-9044-41d2-f7d2-d6a3b3a86e7b"
+        "outputId": "be419061-c2e2-4cf2-c58b-243373289cdd"
       },
-      "execution_count": 4,
+      "execution_count": 24,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -922,7 +922,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-5518e6ee-cbe4-4cb6-8ac6-7e32118d82dc\" class=\"colab-df-container\">\n",
+              "  <div id=\"df-6a41cbaf-d376-46a6-873f-278fc545766c\" class=\"colab-df-container\">\n",
               "    <div>\n",
               "<style scoped>\n",
               "    .dataframe tbody tr th:only-of-type {\n",
@@ -1140,7 +1140,7 @@
               "    <div class=\"colab-df-buttons\">\n",
               "\n",
               "  <div class=\"colab-df-container\">\n",
-              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-5518e6ee-cbe4-4cb6-8ac6-7e32118d82dc')\"\n",
+              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-6a41cbaf-d376-46a6-873f-278fc545766c')\"\n",
               "            title=\"Convert this dataframe to an interactive table.\"\n",
               "            style=\"display:none;\">\n",
               "\n",
@@ -1192,12 +1192,12 @@
               "\n",
               "    <script>\n",
               "      const buttonEl =\n",
-              "        document.querySelector('#df-5518e6ee-cbe4-4cb6-8ac6-7e32118d82dc button.colab-df-convert');\n",
+              "        document.querySelector('#df-6a41cbaf-d376-46a6-873f-278fc545766c button.colab-df-convert');\n",
               "      buttonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "      async function convertToInteractive(key) {\n",
-              "        const element = document.querySelector('#df-5518e6ee-cbe4-4cb6-8ac6-7e32118d82dc');\n",
+              "        const element = document.querySelector('#df-6a41cbaf-d376-46a6-873f-278fc545766c');\n",
               "        const dataTable =\n",
               "          await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                    [key], {});\n",
@@ -1217,8 +1217,8 @@
               "  </div>\n",
               "\n",
               "\n",
-              "    <div id=\"df-3e2f03f5-22a5-4d81-9d34-5de56fad6f30\">\n",
-              "      <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-3e2f03f5-22a5-4d81-9d34-5de56fad6f30')\"\n",
+              "    <div id=\"df-5f3ea704-603b-4062-9995-541a38127f34\">\n",
+              "      <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-5f3ea704-603b-4062-9995-541a38127f34')\"\n",
               "                title=\"Suggest charts\"\n",
               "                style=\"display:none;\">\n",
               "\n",
@@ -1337,14 +1337,14 @@
               "        }\n",
               "        (() => {\n",
               "          let quickchartButtonEl =\n",
-              "            document.querySelector('#df-3e2f03f5-22a5-4d81-9d34-5de56fad6f30 button');\n",
+              "            document.querySelector('#df-5f3ea704-603b-4062-9995-541a38127f34 button');\n",
               "          quickchartButtonEl.style.display =\n",
               "            google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "        })();\n",
               "      </script>\n",
               "    </div>\n",
               "\n",
-              "  <div id=\"id_278fc8fb-2149-4bdb-b5b2-2927502fe434\">\n",
+              "  <div id=\"id_4f7ce90c-7563-4f08-998c-75c055072a33\">\n",
               "    <style>\n",
               "      .colab-df-generate {\n",
               "        background-color: #E8F0FE;\n",
@@ -1388,7 +1388,7 @@
               "    <script>\n",
               "      (() => {\n",
               "      const buttonEl =\n",
-              "        document.querySelector('#id_278fc8fb-2149-4bdb-b5b2-2927502fe434 button.colab-df-generate');\n",
+              "        document.querySelector('#id_4f7ce90c-7563-4f08-998c-75c055072a33 button.colab-df-generate');\n",
               "      buttonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
@@ -1409,7 +1409,7 @@
             }
           },
           "metadata": {},
-          "execution_count": 4
+          "execution_count": 24
         }
       ]
     },
@@ -1444,9 +1444,9 @@
           "height": 1000
         },
         "id": "Oigg9ehnO-Mv",
-        "outputId": "1ae1b089-484a-4405-b116-687a1639ea19"
+        "outputId": "c5c31db1-28fa-4369-ac13-d29f0add2cb0"
       },
-      "execution_count": 5,
+      "execution_count": 25,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1498,7 +1498,7 @@
       "metadata": {
         "id": "shWRV-IPBn5m"
       },
-      "execution_count": 14,
+      "execution_count": 26,
       "outputs": []
     },
     {
@@ -1564,18 +1564,9 @@
         "\n",
         "pipe.fit(X_train, y_train)\n",
         "\n",
-        "# # Implement Logestic Regression Model\n",
-        "# lr_model = LogisticRegression(max_iter=1000, random_state=42)\n",
-        "# # lr_model = LogisticRegression(max_iter=1000, penalty='l2', solver=\"lbfgs\", class_weight=\"balanced\", random_state=42)\n",
-        "# lr_model.fit(X_train_scaled, y_train)\n",
-        "\n",
         "# LR Model Prediction\n",
         "lr_pred = pipe.predict(X_test)\n",
         "lr_pred_prob = pipe.predict_proba(X_test)[:, 1] # LR Prediction Probability\n",
-        "\n",
-        "# # Implement Logestic Regression Model\n",
-        "# lr_pred = lr_model.predict(X_test_scaled)\n",
-        "# lr_pred_prob = lr_model.predict_proba(X_test_scaled)[:, 1] # LR Prediction Probability\n",
         "\n",
         "# LR Model Evaluation\n",
         "print(\"Accuracy Score:\", accuracy_score(y_test, lr_pred))\n",
@@ -1588,9 +1579,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "v5pZ3OZ2IItw",
-        "outputId": "80f3865b-4d26-483f-c906-0c23238c7ece"
+        "outputId": "fb3052e0-c001-40a4-884c-f2ec7fbfe436"
       },
-      "execution_count": 17,
+      "execution_count": 27,
       "outputs": [
         {
           "output_type": "stream",
@@ -1628,7 +1619,6 @@
         "# plt.savefig('confusion_matrix_lr.png')\n",
         "\n",
         "# Coefficients\n",
-        "# coef_df = pd.DataFrame({'Feature': X.columns, 'Coefficient': lr_model.coef_[0]})\n",
         "coef_df = pd.DataFrame({'Feature': X.columns, 'Coefficient': pipe['lr'].coef_[0]})\n",
         "coef_df = coef_df.sort_values(by='Coefficient', ascending=False)\n",
         "print(\"\\nModel Coefficients:\\n\", coef_df)\n",
@@ -1647,9 +1637,9 @@
           "height": 1000
         },
         "id": "bkybHTRNPiIb",
-        "outputId": "7c82b225-67e9-4b3d-e92e-e7baf10be9b3"
+        "outputId": "c0f22be2-2df1-4d18-de77-db6f6f69e9b6"
       },
-      "execution_count": 20,
+      "execution_count": 28,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1727,10 +1717,27 @@
         "gbm_pred = gbm"
       ],
       "metadata": {
-        "id": "7O3Vwgi81mtd"
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 176
+        },
+        "id": "7O3Vwgi81mtd",
+        "outputId": "70e57504-ab74-4feb-917d-8d9df9c543d9"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 29,
+      "outputs": [
+        {
+          "output_type": "error",
+          "ename": "NameError",
+          "evalue": "name 'gbm' is not defined",
+          "traceback": [
+            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+            "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+            "\u001b[0;32m/tmp/ipython-input-1086368789.py\u001b[0m in \u001b[0;36m<cell line: 0>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0;31m# GBM Prediction\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 6\u001b[0;31m \u001b[0mgbm_pred\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mgbm\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+            "\u001b[0;31mNameError\u001b[0m: name 'gbm' is not defined"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
